--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "viki-resize",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "engines": {
+    "node": "0.6.x",
+    "npm": "1.1.x"
+  },
   "dependencies": {
     "express": "2.5.9",
     "gm": "1.3.0",
