--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "express": "2.5.9",
     "gm": "1.3.0",
     "coffee-script": "1.3.1"
+  },
+  "devDependencies": {
+    "mocha": "1.1.0",
+    "should": "0.6.3"
   }
 }
