--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "express": "2.5.9",
+    "express": "3.0.0beta2",
     "gm": "1.3.0",
     "coffee-script": "1.3.1"
   },
