--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.0.0beta2",
     "gm": "1.3.0",
-    "coffee-script": "1.3.1"
+    "coffee-script": "1.3.1",
+    "mime": "1.2.5"
   },
   "devDependencies": {
     "mocha": "1.1.0",
